hphp/test/slow/reified_generics/static-method-using-self.php.expectf
Fatal error: You may not use object creation for reified self or parent from a static method in %s on line 5
